--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+index.html
 <!DOCTYPE html>
 <html>
 
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <title>module2-solution</title>
 </head>
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 
 <body>
     <h1>Our Menu</h1>
